# TelegramDrive

./: Readme.md  config.py  main.py  pyproject.toml  replit.md  requirements.txt
bot/: commands.py  handlers.py
services/: file_manager.py  gemini_ai.py  google_drive.py  url_shortener.py
storage/: database.py  files.db
utils/: helpers.py
