[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "google-api-python-client>=2.179.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.31.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]==22.3",
]
